gitops/base/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traderx-ingress
  name: traderx-ingress
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: traderx-ingress
